@@ -8,6 +8,7 @@ import com.igrejahub.finance.entity.FinancialCategory;
 import com.igrejahub.finance.entity.FinancialTransaction;
 import com.igrejahub.finance.mapper.FinancialCategoryMapper;
 import com.igrejahub.finance.repository.FinancialCategoryRepository;
+import com.igrejahub.security.SecurityUtils;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -15,38 +16,71 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
+/**
+ * ISOLAMENTO: categorias com church_id = NULL são globais (padrão do sistema).
+ * Categorias com church_id preenchido pertencem àquela Igreja.
+ * Um usuário vê: categorias globais (null) + categorias da sua Igreja.
+ */
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class FinancialCategoryService {
 
     private final FinancialCategoryRepository categoryRepository;
-    private final FinancialCategoryMapper categoryMapper;
+    private final FinancialCategoryMapper     categoryMapper;
+    private final SecurityUtils               securityUtils;
 
     public Page<FinancialCategoryDto> getCategories(Pageable pageable) {
         return categoryRepository.findByOrganizationId(TenantContext.getCurrentTenant(), pageable)
-                .map(categoryMapper::toDto);
+            .map(categoryMapper::toDto);
     }
 
     public List<FinancialCategoryDto> getActiveCategories() {
-        return categoryRepository.findByOrganizationIdAndActiveTrue(TenantContext.getCurrentTenant())
-                .stream().map(categoryMapper::toDto).toList();
+        Long orgId    = TenantContext.getCurrentTenant();
+        Long churchId = securityUtils.getEffectiveChurchId();
+
+        return categoryRepository.findByOrganizationIdAndActiveTrue(orgId).stream()
+            // Ver: categorias globais (churchId nulo) + categorias da Igreja do usuário
+            .filter(c -> c.getChurchId() == null
+                || securityUtils.canViewAll()
+                || c.getChurchId().equals(churchId))
+            .map(categoryMapper::toDto)
+            .collect(Collectors.toList());
+    }
+
+    public List<FinancialCategoryDto> getActiveCategoriesByType(String type) {
+        Long orgId    = TenantContext.getCurrentTenant();
+        Long churchId = securityUtils.getEffectiveChurchId();
+
+        return categoryRepository.findByOrganizationIdAndType(
+            orgId, FinancialTransaction.TransactionType.valueOf(type)).stream()
+            .filter(c -> c.isActive())
+            .filter(c -> c.getChurchId() == null
+                || securityUtils.canViewAll()
+                || c.getChurchId().equals(churchId))
+            .map(categoryMapper::toDto)
+            .collect(Collectors.toList());
     }
 
     @Transactional
     public FinancialCategoryDto createCategory(String name, String type, String color) {
-        Long orgId = TenantContext.getCurrentTenant();
+        Long orgId    = TenantContext.getCurrentTenant();
+        Long churchId = securityUtils.getEffectiveChurchId();
+
         if (categoryRepository.existsByOrganizationIdAndNameIgnoreCase(orgId, name)) {
             throw new BusinessException("Já existe uma categoria com este nome");
         }
         FinancialCategory category = FinancialCategory.builder()
-                .name(name)
-                .type(FinancialTransaction.TransactionType.valueOf(type))
-                .color(color)
-                .active(true)
-                .build();
+            .name(name)
+            .type(FinancialTransaction.TransactionType.valueOf(type))
+            .color(color)
+            .active(true)
+            .build();
         category.setOrganizationId(orgId);
+        // Vincular à Igreja do criador (ROOT global cria categoria global com null)
+        category.setChurchId(securityUtils.canViewAll() ? null : churchId);
         return categoryMapper.toDto(categoryRepository.save(category));
     }
 
@@ -67,10 +101,16 @@ public class FinancialCategoryService {
     }
 
     private FinancialCategory getOwnedCategory(Long id) {
-        FinancialCategory category = categoryRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("FinancialCategory", id));
-        if (!category.getOrganizationId().equals(TenantContext.getCurrentTenant())) {
-            throw new BusinessException("Acesso não autorizado");
+        Long orgId = TenantContext.getCurrentTenant();
+        FinancialCategory category = categoryRepository.findByIdAndOrganizationId(id, orgId)
+            .orElseThrow(() -> new ResourceNotFoundException("FinancialCategory", id));
+        if (!securityUtils.canViewAll()) {
+            Long callerChurchId = securityUtils.getEffectiveChurchId();
+            if (category.getChurchId() != null
+                    && callerChurchId != null
+                    && !callerChurchId.equals(category.getChurchId())) {
+                throw new BusinessException("Você não tem acesso a esta categoria.");
+            }
         }
         return category;
     }
